feat: add endpoints to retrieve activities and posts by user ID
