# docs/swagger.yaml
@@ -1019,6 +1019,36 @@ paths:
       summary: 通过搜索条件查找活动
       tags:
       - Activity
+  /act/user/{userId}:
+    get:
+      parameters:
+      - description: 用户id
+        in: path
+        name: userId
+        required: true
+        type: string
+      - description: token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/resp.Resp'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/resp.ListActivitiesResp'
+                  type: array
+              type: object
+      summary: 通过用户id查找该用户发布的活动
+      tags:
+      - Activity
   /comment/answer:
     post:
       parameters:
@@ -1600,6 +1630,36 @@ paths:
                   type: array
               type: object
       summary: 通过用户ID查找帖子
+      tags:
+      - Post
+  /post/user/{userId}:
+    get:
+      parameters:
+      - description: 用户id
+        in: path
+        name: userId
+        required: true
+        type: string
+      - description: token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/resp.Resp'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/resp.ListPostsResp'
+                  type: array
+              type: object
+      summary: 通过用户ID查找该用户发布的帖子
       tags:
       - Post
   /user/avatar:
