# internal/router/post.go
@@ -36,6 +36,7 @@ func (pr *PostRouter) RegisterPostRouters() {
 		post.POST("/delete", ginx.WrapRequestWithClaims(pr.pch.DeletePost))
 		post.GET("/load", ginx.WrapWithClaims(pr.pch.LoadDraft))
 		post.GET("/own", ginx.WrapWithClaims(pr.pch.FindPostByOwnerID))
+		post.GET("/user/:userId", ginx.WrapRequest(pr.pch.FindPostByUserID))
 		post.GET("/:id", ginx.WrapRequest(pr.pch.FindPostByBid))
 	}
 }
